plugins {
	id 'java-library'
	id 'net.fabricmc.fabric-loom' version '1.15.2' apply(false)
	id 'net.neoforged.moddev' version '2.0.140' apply(false)
	id "me.modmuss50.mod-publish-plugin" version "1.1.0"
}

tasks.named('wrapper', Wrapper).configure {
	distributionType = Wrapper.DistributionType.BIN
}

apply from: 'https://raw.githubusercontent.com/FTBTeam/mods-meta/main/gradle/changelog.gradle'

allprojects {
	apply plugin: 'idea'
	apply plugin: 'java-library'
	apply plugin: 'maven-publish'

	apply from: "https://raw.githubusercontent.com/FTBTeam/mods-meta/main/gradle/git-md-changelog.gradle"

	version = project.mod_version
	group = project.maven_group

	base {
		archivesName = "${project.archives_base_name}-${project.name}"
	}

	// needs to be done AFTER version is set
	apply from: "https://raw.githubusercontent.com/FTBTeam/mods-meta/main/gradle/publishing.gradle"

	tasks.withType(JavaCompile).configureEach {
		options.encoding = 'UTF-8'
		options.release = 25
	}

	dependencies {
//        testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0-M1'
	}

	java {
		withSourcesJar()
	}

	publishing {
		repositories {
			if (ftbPublishing.ftbToken) {
				maven {
					url ftbPublishing.ftbURL
					credentials {
						username = ftbPublishing.ftbUser
						password = ftbPublishing.ftbToken
					}
				}
			}
		}
	}
}

subprojects {
	if (project.name != "common") {
		dependencies {
			api project(":common")
		}

		jar {
			from project(":common").sourceSets.main.output
		}
	}

	repositories {
		mavenCentral()
		mavenLocal()

		maven {
			url "https://maven.ftb.dev/releases"
			content {
				includeGroup "dev.ftb.mods"
			}
		}

		maven {
			url "https://maven.ftb.dev/snapshots"
			content {
				includeGroup "dev.ftb.mods"
			}
		}

		maven {
			url "https://maven.fabricmc.net/"
			content {
				includeGroup "net.fabricmc"
				includeGroup "org.spongepowered"
			}
		}

//		maven {
//			url "https://www.cursemaven.com"
//			content {
//				includeGroup "curse.maven"
//			}
//		}
//
//		maven {
//			name "ModMaven (JEI)"
//			url "https://modmaven.dev/"
//			content {
//				includeGroup "mezz.jei"
//			}
//		}
//
//		maven {
//			// Emi
//			name = "TerraformersMC"
//			url = "https://maven.terraformersmc.com/"
//		}
	}

	processResources {
		exclude '.cache'

		inputs.property "version", project.version

		// TODO: Fabric is working on resolving this: https://github.com/FabricMC/fabric-loader/pull/1101
		def fixedMcVersion = project.minecraft_version
		if (fixedMcVersion.contains("-") && project.name == "fabric") {
			def hyphenParts = fixedMcVersion.split("-")
			fixedMcVersion = ""
			for (int i = 0; i < hyphenParts.size(); i++) {
				if (i < 2) {
					fixedMcVersion = fixedMcVersion + (i > 0 ? "-" : "") + hyphenParts[i]
				} else {
					fixedMcVersion = fixedMcVersion + "." + hyphenParts[i]
				}
			}
		}

		filesMatching(["META-INF/neoforge.mods.toml", "fabric.mod.json"]) {
			expand "version": project.version,
					"neoforgeversionrange": project.neoforge_version_range,
					"neoforgeloaderversion": project.neoforge_loader_version,
					"mcversion": fixedMcVersion,
					"fabricapiversionrange": project.fabric_api_version_range,
					"ftblibraryversion": project.ftb_library_version,
					"ftbteamsversion": project.ftb_teams_version
		}
	}
}

idea {
	module {
		downloadSources = true
		downloadJavadoc = true
	}
}

publishMods {
	dryRun = providers.environmentVariable("CURSEFORGE_KEY").getOrNull() == null
	changelog = createChangelog(project)
	version = mod_version

	// TODO: Migrate to something else
	def tag = providers.environmentVariable("TAG").getOrElse("release")
	type = tag.endsWith("-beta") ? BETA : (tag.endsWith("-alpha") ? ALPHA : STABLE)

	def createOptions = (String projectName) -> {
		publishOptions {
			file = project.provider { project(":$projectName").tasks.remapJar }.flatMap { it.archiveFile }
			displayName = "[${projectName.toUpperCase()}][${minecraft_version}] ${readable_name} ${mod_version}"
			modLoaders.add(projectName.toLowerCase())
		}
	}

	def fabricOptions = createOptions("fabric")
	def neoForgeOptions = createOptions("neoforge")

	def curseForgeOptions = curseforgeOptions {
		accessToken = providers.environmentVariable("CURSEFORGE_KEY")
		minecraftVersions.add("${minecraft_version}")
		javaVersions.add(JavaVersion.VERSION_25)
	}

	curseforge("curseforgeFabric") {
		from(curseForgeOptions, fabricOptions)
		projectId = curseforge_id_fabric
		requires('fabric-api')
		requires('ftb-library-fabric')
		requires('ftb-teams-fabric')
		optional('ftb-ranks-fabric')
	}

	curseforge("curseforgeNeoForge") {
		from(curseForgeOptions, neoForgeOptions)
		projectId = curseforge_id_forge
		requires('ftb-library-forge')
		requires('ftb-teams-forge')
		optional('ftb-ranks-forge')
	}
}
